<resources>
    <string name="app_name">BookshelfHelper</string>

    <string name="selectTitle">Title</string>
    <string name="selectAuthor">Author</string>
    <string name="selectPublisher">Publisher</string>
    <string name="selectGenre"> Select Genre</string>
    <string name="selectFormat"> Select Format</string>
    <string name="selectType"> Select Type</string>
    <string name="selectLanguage"> Select Language</string>
    <string name="selectVolumesReleased">Volumes Released</string>
    <string name="selectVolumesOwned">Volumes Owned</string>
    <string name="selectPagesColor"> Select Pages Color</string>
    <string name="selectYearBought">Year Bought</string>

    <string name="formatTitle">Format</string>
    <string name="languageTitle">Language</string>
    <string name="yearBoughtTitle">Year Bought</string>
    <string name="descriptionTitle">Book Information</string>
    <string name="publisherTitle">Publisher: </string>
    <string name="genreTitle">Genre: </string>
    <string name="typeTitle">Type: </string>
    <string name="volumesTitle">Volumes</string>
    <string name="descriptionTitleCB">Comic book Information</string>
    <string name="statusTitle">Status: </string>
    <string name="pagesColorTitle">Pages Color: "</string>

    <string name="statusButton">Status</string>
    <string name="ownedButton">Owned</string>
    <string name="releasedButton">Released</string>

    <string name="chipAll">All</string>
    <string name="chipFantasy">Fantasy</string>
    <string name="chipRomance">Romance</string>
    <string name="chipDrama">Drama</string>
    <string name="chipComedy">Comedy</string>
    <string name="chipMystery">Mystery</string>
    <string name="chipScienceFiction">Science Fiction</string>
    <string name="chipAdventure">Adventure</string>
    <string name="chipHorror">Horror</string>
    <string name="chipThriller">Thriller</string>
    <string name="chipAction">Action</string>
    <string name="chipHistoricalFiction">Historical Fiction</string>
    <string name="chipNonfiction">Nonfiction</string>

    <string-array name="genres">
        <item>Action</item>
        <item>Adventure</item>
        <item>Comedy</item>
        <item>Drama</item>
        <item>Fantasy</item>
        <item>Historical Fiction</item>
        <item>Horror</item>
        <item>Mystery</item>
        <item>Nonfiction</item>
        <item>Romance</item>
        <item>Science Fiction</item>
        <item>Thriller</item>
    </string-array>

    <string-array name="formats">
        <item>A5</item>
        <item>B6</item>
    </string-array>

    <string-array name="types">
        <item>Hard Cover</item>
        <item>Soft Cover</item>
    </string-array>

    <string-array name="languages">
        <item>Polish</item>
        <item>English</item>
        <item>Japanese</item>
    </string-array>

    <string-array name="pagesColor">
        <item>Black and White</item>
        <item>Full Color</item>
    </string-array>

    <string-array name="bookStats">
        <item>Books throughout the years</item>
        <item>Books by Author</item>
        <item>Go to Comic book stats</item>
    </string-array>

    <string-array name="comicBookStats">
        <item>Volumes Owned by Titles</item>
        <item>Comic books by Publisher</item>
        <item>Comic books by Status</item>
        <item>Go to Book stats</item>
    </string-array>

</resources>