<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="addEditComicBookItemViewModel"
            type="com.example.bookshelfhelper.comicbook.AddEditComicBookViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".book.AddEditBookFragment">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <EditText
                    android:id="@+id/addTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Title"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addEditComicBookItemViewModel.inputTitle}" />

                <EditText
                    android:id="@+id/addAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Author"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addEditComicBookItemViewModel.inputAuthor}" />

                <EditText
                    android:id="@+id/addPublisher"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Publisher"
                    android:inputType="text"
                    android:padding="15dp"
                    android:text="@={addEditComicBookItemViewModel.inputPublisher}" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/selectFormat">

                    <AutoCompleteTextView
                        android:id="@+id/addFormat"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@={addEditComicBookItemViewModel.inputFormat}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/selectType">

                    <AutoCompleteTextView
                        android:id="@+id/addType"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@={addEditComicBookItemViewModel.inputType}" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/selectLanguage">

                    <AutoCompleteTextView
                        android:id="@+id/addLanguage"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@={addEditComicBookItemViewModel.inputLanguage}" />
                </com.google.android.material.textfield.TextInputLayout>

                <EditText
                    android:id="@+id/addVolumesReleased"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Volumes Released"
                    android:inputType="number"
                    android:padding="15dp"
                    android:text="@={addEditComicBookItemViewModel.inputVolumesReleased}" />

                <EditText
                    android:id="@+id/addVolumesOwned"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Volumes Owned"
                    android:inputType="number"
                    android:padding="15dp"
                    android:text="@={addEditComicBookItemViewModel.inputVolumesOwned}" />

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:hint="@string/selectPagesColor">

                    <AutoCompleteTextView
                        android:id="@+id/addPagesColor"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="none"
                        android:text="@={addEditComicBookItemViewModel.inputPagesColor}" />
                </com.google.android.material.textfield.TextInputLayout>

                <Button
                    android:id="@+id/saveButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="15dp"
                    android:onClick="@{()->addEditComicBookItemViewModel.saveOrUpdate()}"
                    android:src="@drawable/ic_add"
                    android:text="@={addEditComicBookItemViewModel.addOrEditButtonText}"
                    android:layout_gravity="center"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</layout>